--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,6 @@
         "temp/":true,
         "Temp/":true
     },
-    "dotnet.defaultSolution": "chess-project.sln"
+    "dotnet.defaultSolution": "chess-project.sln",
+    "dotnet.preferCSharpExtension": true
 }
